@@ -33,7 +33,7 @@
 		<p>Gprof plugin depends on binutils (such as addr2line, c++filt and nm). Gprof can be used on any platform as soon as these binutils are in PATH. For example, you can use it on windows with cygwin.</p>
 		<p>First of all, the user has to compile the C/C++ program with profiling enabled using the -pg option prior to running the tool. </p>
 		<p>
-			<img border="0" src="images/gprof-compile-step.png"/>
+			<img border="0" src="images/Gprof-compile-step.png"/>
 		</p><hr/>
 		<table class="navigation" style="width: 100%;" border="0" summary="navigation">
 			<tr>
