@@ -30,13 +30,13 @@
 			</tr>
 		</table><hr/>
 		<h1 id="Opening_gmon.out">Opening gmon.out</h1>
-		<p>Once the application run is finished, a gmon.out file is generated under the project.
-
-			<img border="0" src="images/gprof-project-explorer.png"/>
+		<p>Once the application run is finished, a gmon.out file is generated under the project.</p>
+		<p>
+			<img border="0" src="images/Gprof-project-explorer.png"/>
 		</p>
-		<p>Double clicking on this file will open a dialog to select the associated binary. 
-
-			<img border="0" src="images/gprof-binary-file.png"/>
+		<p>Double clicking on this file will open a dialog to select the associated binary. </p>
+		<p>
+			<img border="0" src="images/Gprof-binary-file.png"/>
 		</p><hr/>
 		<table class="navigation" style="width: 100%;" border="0" summary="navigation">
 			<tr>
